# Mp4v2Demo

./: README.md  local.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/libs/include/: com_seuic_jni_Mp4v2Helper.h
app/src/androidTest/java/com/chezi008/mp4v2demo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Mp4v2Helper.c  mp4record.c  mp4record.h
app/src/main/cpp/include/: Mp4v2Helper.h  mp4record.h
app/src/main/cpp/include/mp4v2/: file_prop.h  itmf_generic.h  platform.h
app/src/main/cpp/mp4record/: CMakeLists.txt
app/src/main/java/com/me/archko/mp4/: SLApolloUtils.java  TestMp4Activity.java
app/src/main/java/com/seuic/jni/: Mp4v2Helper.java
app/src/main/res/layout/: main_layout.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/chezi008/mp4v2demo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
middlelibrary/: CMakeLists.txt  build.gradle
middlelibrary/src/main/: AndroidManifest.xml
middlelibrary/src/main/cpp/include/mp4v2/: chapter.h  file.h  general.h  isma.h  itmf_tags.h  mp4v2.h  sample.h  streaming.h  track.h  track_prop.h
middlelibrary/src/main/cpp/mp4record/: CMakeLists.txt  mp4record.c
middlelibrary/src/main/cpp/mp4v2helper/: CMakeLists.txt  Mp4v2Helper.c
middlelibrary/src/main/java/com/seuic/jni/: Mp4v2Helper.java
